crates/compiler/cypress/tests/snapshots/test_parse__nonempty_package_header_header.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "package \"foo/barbaz\"\n    exposes [Foo, Bar]\n    packages { foo: \"./foo\" }\n"
---
(BeginFile
    (BeginHeaderPackage
        String=>String@1
        (BeginCollection TypeName=>UpperIdent@4 TypeName=>UpperIdent@6 EndCollection)
        (BeginCollection EndCollection)
    EndHeaderPackage)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

