crates/compiler/cypress/tests/snapshots/test_parse__not_docs_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "#######\n### not docs!\n##still not docs\n######\nx = 5\n\n42\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            Num=>Int@2
        EndAssignDecl)
        HintExpr
        Num=>Int@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), IntBase10("5"))
IntBase10("42")

[=== formatted below ===]

