crates/compiler/cypress/tests/snapshots/test_parse__not_multiline_string_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "!\n\"\"\"\n\"\"\"\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (* String=>String@1 EndUnaryNot) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UnaryOp(Not, String("\"\"\"\n\"\"\""))

[=== formatted below ===]

